--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
         android:allowBackup="true"
@@ -12,6 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".Login"
+            android:exported="true" />
         <activity
             android:name=".AddServ"
             android:exported="true" />
@@ -22,19 +26,19 @@
             android:name=".AtualizarFunc"
             android:exported="true" />
         <activity
-            android:name=".AddFunc"
-            android:exported="true" />
-        <activity
-            android:name=".ListaServ"
+            android:name=".MainActivity"
             android:exported="true" />
         <activity
             android:name=".ContaFunc"
             android:exported="true" />
         <activity
+            android:name=".ListaServ"
+            android:exported="true" />
+        <activity
             android:name=".DetalhesServ"
             android:exported="true" />
         <activity
-            android:name=".MainActivity"
+            android:name=".AddFunc"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
